# ChangeLog for dev-libs/ltxml
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ltxml/ChangeLog,v 1.12 2011/11/14 03:53:45 xmw Exp $

*ltxml-1.2.9 (14 Nov 2011)

  14 Nov 2011; Michael Weber <xmw@gentoo.org> +ltxml-1.2.9.ebuild:
  Version bump, EAPI-4 (bug 203808)

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #28480

  02 Jan 2008; Raúl Porcel <armin76@gentoo.org> ltxml-1.2.6.ebuild:
  Re-add ~ia64

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> ltxml-1.2.5.ebuild:
  Mark 1.2.5 stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> ltxml-1.2.5.ebuild:
  Mark 1.2.5 ~ia64

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> ltxml-1.2.5.ebuild:
  Stable on ppc.

  26 Jun 2004; David Holm <dholm@gentoo.org> ltxml-1.2.5.ebuild:
  Added to ~ppc.

  18 Jun 2004; David Holm <dholm@gentoo.org> ltxml-1.2.6.ebuild:
  Added to ~ppc.

*ltxml-1.2.6 (15 Jun 2004)

  15 Jun 2004; Rob Cakebread <pythonhead@gentoo.org> ltxml-1.2.5.ebuild,
  +ltxml-1.2.6.ebuild:
  Version bump, 1.2.5 marked stable on x86

*ltxml-1.2.5 (29 Oct 2003)

  29 Oct 2003; Rob Cakebread <pythonhead@gentoo.org> ltxml-1.2.5.ebuild,
  metadata.xml:
  Initial commit
