@@ -6,13 +6,13 @@ DIST ltxml-1.2.6.tar.gz 1144896 RMD160 ffac3dee95f7314c2cdf820b6ef8a753855877b2 
 DIST ltxml-1.2.9.tar.gz 304050 RMD160 5a0f547ab2b466e9da4b2b6e9389588efab0a453 SHA1 dbe074fa0a1e44de29d55f711bd3f4e1ed3ab832 SHA256 bc28fcdf63be636e03076deeacba75255cd9281f40a3dfd65a8c04aa93242921
 EBUILD ltxml-1.2.5.ebuild 751 RMD160 c69d8a6292b4eb4e38c655c7e31baace560f414b SHA1 7f5bfaa248df53c04683605fa118fe77e6354089 SHA256 f8749a51bf8211ce6e5236a4c664476871c1c5e22bf4eac12488d1d68cb6b443
 EBUILD ltxml-1.2.6.ebuild 752 RMD160 512d4f5acc239613c8278da1b3c2056a2f89db3a SHA1 a0d514004dc212fd257271364da5e2ce504e84a4 SHA256 72b3f258cd3b50789ac6352401f5b2f52d8c6bcab3c4eba07d7d7e6d105c059f
-EBUILD ltxml-1.2.9.ebuild 756 RMD160 8b78be9f1a94b641b2ab8135f242ec2807803439 SHA1 810b5814bc21d124e0549a97df19b97211205669 SHA256 fce0d951e7b61d1c5eee8c71b0f590fe3690e5cc85dcf6b933b4d13fbb171644
-MISC ChangeLog 1364 RMD160 84362727456fc68b31642864469868bc88b571dd SHA1 7e7360ef1d2cd9dbfe62e1c770bf2d6a8a897bc4 SHA256 953816d01af4e30c62882ccebc822cfcbb67077f102c6fdaf36bc92f2aaef4d6
+EBUILD ltxml-1.2.9.ebuild 851 RMD160 fe80224144da208978d5a6e9a37be50594ea8806 SHA1 0b138638da4a886374903c1d62b929f696a7bff0 SHA256 1de666270491bd7133dc5914b80960c0ec7ef09684f18f51c4e21694f3f9303f
+MISC ChangeLog 1457 RMD160 69e3eae369a7b3c7a1e19f5ade4c5df8eb1efd67 SHA1 5ea6a4bde2af42ac74c87a717c2d37ae45efd676 SHA256 9c8577528c7a778b93cf6e345df0d3261832585d9ad7c9c5c4533fa6a9556557
 MISC metadata.xml 314 RMD160 1a6e982a3d06bc43d8434c0096be44d504690081 SHA1 99fffdfba6fce52f984b1383884dcd6e1d5b6683 SHA256 5fc9b7631e7fc4e6309d9a2ab07e583fc8a03992463357f3065042c8d027c751
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7AkM4ACgkQknrdDGLu8JBj3AD9HJ2XIL+nl8YwSNoBbY142IvM
-md4hNzGQbsaXadpzY94A/jtXtKMpOIDhqmNFs8mkNClBQfwwKCspyIjHXz0CgxzV
-=ouSQ
+iF4EAREIAAYFAk7AlOUACgkQknrdDGLu8JDUrwD+NkDgyecJ/ggIs/x82E4SVkLF
+ow5iNdAsqwZ8jAzGt8kA/0IKTdkJk8vxE6Bty5x1rBeLQ00SJJhh5w1V2WqS628u
+=oLgZ
 -----END PGP SIGNATURE-----
