@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/ltxml
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/ltxml/ChangeLog,v 1.12 2011/11/14 03:53:45 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/ltxml/ChangeLog,v 1.13 2011/11/14 04:11:11 xmw Exp $
+
+  14 Nov 2011; Michael Weber <xmw@gentoo.org> ltxml-1.2.9.ebuild:
+  Fix CFLAGS (bug 240225)
 
 *ltxml-1.2.9 (14 Nov 2011)
 
